--- a/sections/reviews.liquid
+++ b/sections/reviews.liquid
@@ -1,8 +1,9 @@
 <div style="clear: both"></div>
 
+
 <div
-  id="judgeme_product_reviews"
-  class="jdgm-widget jdgm-review-widget"
+  id="judgeme_product_reviews {% unless product.images.size < 2 %}next-section{% endunless %}"
+  class="jdgm-widget jdgm-review-widget "
   data-product-title="{{ product.title | escape }}"
   data-id="{{ product.id }}"
   data-auto-install="false"
