--- a/assets/header.css
+++ b/assets/header.css
@@ -45,12 +45,12 @@
     color: #F2F2F2;
     font-size: 16px;
     line-height: 16px;
+    padding: 0px 10px;
 }
 
 .main-menu {
     height: 100%;
     display: flex;
-    gap: 20px;
     list-style: none;
     padding: 0px;
     margin: 0px;
@@ -126,7 +126,7 @@
 }
 
 .nav_icon,.nav_link,.sub_link,.sub_sub_link,.logo_desktop {
-    transition: 300ms cubic-bezier(0.175, 0.885, 0.32, 1.08);
+    transition: 300ms cubic-bezier(0.175, 0.885, 0.32, 1.1);
 }
 
 .nav_icon:hover,.logo_desktop:hover {
