--- a/assets/component-slider.css
+++ b/assets/component-slider.css
@@ -375,3 +375,8 @@ slider-component.slider-component-full-width {
 .slider-button--prev:not([disabled]):hover .icon {
   transform: rotate(90deg) scale(1.1);
 }
+
+
+.slider-button--next,.slider-button--prev {
+  display: none !important;
+}
