Updated the price format
- Added a conditional if the price was in saudi riyals the new symbol will load instead of SAR, this applies to all instances where the price is shown

--- a/assets/custom_product_grid.css
+++ b/assets/custom_product_grid.css
@@ -194,6 +194,13 @@ button.add-to-cart-button:hover > img {
     align-items: center;
 }
 
+.saudi-price-holder {
+    display: flex;
+    justify-content: flex-start;
+    gap: 10px;
+    padding-top: 5px;
+}
+
 
 /* Responiveness */
 
