--- a/assets/featured-collection.css
+++ b/assets/featured-collection.css
@@ -211,6 +211,14 @@ button.add-to-cart-button:hover > img {
     align-items: center;
 }
 
+.saudi-price-holder {
+    padding-top: 5px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 10px;
+}
+
 
 /* Responiveness */
 
