--- a/assets/product_page.css
+++ b/assets/product_page.css
@@ -230,6 +230,16 @@
     transform: scale(0.9);
   }
 
+  .sar-currency {
+    filter: invert(98%) sepia(100%) saturate(1%) hue-rotate(321deg) brightness(103%) contrast(100%);
+  }
+
+  .saudi-price-holder {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 15px;
+  }
 
 
   /* responsiveness */
