--- a/assets/custom-banner.css
+++ b/assets/custom-banner.css
@@ -1,22 +1,35 @@
+div.swiper-wrapper {
+  transition-timing-function: cubic-bezier(0.72, 0.71, 0, 1.04) !important;
+}
+
 .banner-container {
   display: flex;
   justify-content: center;
   width: 100%;
   height: max-content;
-  padding: 30px 0px;
   overflow: hidden;
   background-color: #083135;
 }
 
 .custom-mug-banner {
-  width: 100dvw;
-  overflow: visible;
+  width: 80%;
+  max-width: 1400px;
+  overflow: hidden;
   height: max-content;
   text-align: center;
+  position: relative;
+  border-radius: 15px;
 }
 
 .slide_container {
-  height: 75dvh;
+  height: 55dvh;
+  
+}
+
+.swiper-slide {
+  opacity: 1 !important;
+  filter: none !important;
+  transform: none !important;
 }
 
 .banner-content {
@@ -29,12 +42,11 @@
 .image_banner {
   width: 100dvw;
   object-fit: cover;
-  margin: 0px 50px;
 }
 
 .image_banner img {
   border-radius: 40px;
-  height: 75dvh;
+  height: 100%;
   width: 100%;
   object-fit: cover;
 }
@@ -43,7 +55,7 @@
   text-align: center;
   width: 100%;
   position: absolute;
-  bottom: 10%;
+  bottom: 8%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -69,6 +81,7 @@
   color: #083135;
   width: 40%;
   padding-bottom: 10px;
+  font-weight: bold;
 }
 
 .button-wrapper {
@@ -96,9 +109,28 @@
   transform: scale(0.9);
 }
 
-/* Responsive styles */
+.custom-banner-pagination {
+  position: absolute;
+  bottom: 0px;
+  z-index: 2;
+}
+
+/* Responsiveness */
+
+@media (max-width: 768px){
+
+  .custom-mug-banner {
+    width: 90%;
+  }
+
+}
+
 
 @media (min-width: 10px){
+
+  .custom-mug-banner {
+    position: relative;
+  }
 
   .banner-container {
     padding: 0px;
@@ -121,10 +153,16 @@
 
   .image_banner {
     margin: 0px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   .image_banner img {
-    width: 90%;
+    width: 100%;
+    height: 100%;
     border-radius: 20px;
   }
 
@@ -135,7 +173,7 @@
 @media (min-width: 768px) {
 
   .banner-container {
-    padding-bottom: 40px;
+    padding: 20px 0px;
   }
 
   .banner-content {
@@ -145,7 +183,7 @@
 
   .image_banner img {
     width: 100%;
-    border-radius: 40px;
+    border-radius: 20px;
   }
 
   .mug-image {
@@ -154,17 +192,8 @@
     margin-bottom: 0;
   }
 
-  .banner-title {
-    font-size: 40px;
-  }
-
-  .image_banner {
-    margin: 0px  50px;
-  }
-
   .banner-description {
-    font-size: 20px;
-    line-height: 35px;
-    width: 40%;
+    font-size: 15px;
+    line-height: 20px;
   }
 }
