--- a/assets/featured-collection.css
+++ b/assets/featured-collection.css
@@ -7,20 +7,23 @@
     padding: 50px 0px;
     user-select: none;
     background-color: #0d3135;
+    
 }
 
 .featured-collection {
-    width: 75dvw;
+    width: 80dvw;
+    max-width: 1400px;
     height: max-content;
     display: flex;
     gap: 2%;
     flex-shrink: 0;
+    position: relative;
 }
 
 .collection-image {
     width: 500px;
     height: auto;
-    border-radius: 30px;
+    border-radius: 20px;
     overflow: hidden;
     position: relative;
     display: flex;
@@ -53,7 +56,7 @@
 
 .collection-products-wrapper {
     width: 75%;
-    border-radius: 30px;
+    border-radius: 20px;
     overflow-y: hidden;
     overflow-x: scroll;
     white-space: normal;
@@ -79,7 +82,7 @@
     width: 280px;
     background-color: #f2f2f2;
     overflow: hidden;
-    border-radius: 30px;
+    border-radius: 20px;
     display: flex;
     flex-direction: column;
     position: relative;
@@ -93,7 +96,7 @@
 }
 
 .product-image img {
-    border-radius: 30px;
+    border-radius: 20px;
     object-fit: cover;
     -webkit-user-drag: none;
     user-select: none;
@@ -148,6 +151,8 @@
     align-items: center;
     color: #f2f2f2;
     font-size: 20px;
+    height: 20px;
+    width: 20px;
     line-height: 20px;
     padding: 10px;
     background-color: #f2f2f223;
@@ -156,7 +161,9 @@
 }
 
 .prev_button {
-    margin-right: 15px;
+    position: absolute;
+    left: -5%;
+    top: 50%;
 }
 .next_button {
     margin-left: 15px;
