--- a/sections/custom-banner.liquid
+++ b/sections/custom-banner.liquid
@@ -5,11 +5,10 @@
     <div class="slide_container swiper-wrapper">
 
       {% for block in section.blocks %}
-        
         <div class="banner-content swiper-slide">
 
           <div class="image_banner">
-            <img width="100%" height="auto" src="{{ block.settings.banner_image |  image_url }}" alt="" loading="lazy">
+            <img width="100%" src="{{ block.settings.banner_image |  image_url }}" alt="" loading="lazy">
           </div>
 
           <div class="banner-text">
@@ -25,7 +24,6 @@
           </div>
 
         </div>
-
       {% endfor %}
 
     </div>
@@ -40,6 +38,8 @@ document.addEventListener("DOMContentLoaded", function () {
   const swiper = new Swiper('.custom-mug-banner', {
     direction: 'horizontal',
     loop: true,
+    spaceBetween: 50,
+    speed: 400,
     pagination: {
       el: '.custom-banner-pagination',
       clickable: true,
