--- a/sections/custom-banner.liquid
+++ b/sections/custom-banner.liquid
@@ -38,6 +38,9 @@ document.addEventListener("DOMContentLoaded", function () {
   const swiper = new Swiper('.custom-mug-banner', {
     direction: 'horizontal',
     loop: true,
+    autoplay: {
+      delay: 5000,
+    },
     spaceBetween: 50,
     speed: 400,
     pagination: {
