fonts - line height - product page changes

--- a/assets/product_page.css
+++ b/assets/product_page.css
@@ -1,313 +1,11 @@
-/* animations */
-
-@keyframes selected {
-    0% {
-        transform: scale(1);
-    }
-
-    50% {
-        transform: scale(1.15);
-    }
-
-    100% {
-        transform: scale(1);
-    }
+.main-product-wrapper {
+  width: 100%;
+  height: max-content;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-
-.product_1 {
-    width: 100%;
-    height: max-content;
-    background-color: #0d3135;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    direction: rtl;
+.main-product {
+  width: 80dvw;
 }
-
-.product_1_wrapper {
-    width: 80%;
-    padding: 40px 0px;
-    overflow: hidden;
-    max-width: 1400px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.product_image {
-    width: 55%;
-    height: auto;
-}
-
-.product_image img {
-    object-fit: cover;
-    border-radius: 30px;
-}
-
-.product_info {
-    width: 45%;
-    height: max-content;
-    color: rgb(242, 242, 242);
-}
-
-.product_title {
-    margin: 0px !important;
-    font-size: 30px;
-    line-height: 45px;
-    font-weight: bold;
-}
-
-.product_description {
-  padding-top: 20px;
-    text-align: right !important;
-    font-weight: bold;
-}
-
-.product_prices {
-    margin: 0px !important;
-    font-size: 30px;
-    font-weight: bold;
-    padding-top: 20px;
-}
-
-.product_variants {
-    padding: 25px 0px;
-}
-
-.variant-options {
-    display: flex;
-    gap: 10px;
-}
-
-
-.variant-button {
-  padding: 5px 30px;
-  border: 2px solid #c1c8d2;
-  color: #c1c8d2;
-  border-radius: 9999px;
-  cursor: pointer;
-  transition: 300ms cubic-bezier(0.175, 0.885, 0.32, 1.1);
-  font-size: 16px;
-  background-color: transparent;
-}
-
-.variant-button.active {
-  animation: selected 300ms cubic-bezier(0.175, 0.885, 0.32, 1.1) forwards;
-  border-color: #ffffff;
-  background-color: #ffffff;
-  color: #0d3135;
-  font-weight: bold;
-}
-
-.product_buttons {
-  padding-top: 5px;
-  margin: 25px 0px;
-}
-
-.product_buttons form {
-    display: flex;
-    gap: 10px;
-}
-
-.custom-quantity-selector {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 8px;
-    border: 2px solid #c1c8d2;
-    border-radius: 999px;
-    max-width: 140px;
-    max-height: 75px;
-    padding: 2px 15px;
-  }
-  
-  .qty-btn {
-    background-color: transparent;
-    color: #c1c8d2;
-    font-weight: bold;
-    border: none;
-    width: 32px;
-    height: 32px;
-    font-size: 20px;
-    line-height: 1;
-    cursor: pointer;
-    border-radius: 6px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 0;
-    transform: scale(100%);
-    transition: 300ms cubic-bezier(0.175, 0.885, 0.32, 1.1);
-  }
-
-  .qty-btn:hover {
-    transform: scale(90%);
-    color: white;
-  }
-
-  .qty-btn:active {
-    animation: selected 300ms cubic-bezier(0.175, 0.885, 0.32, 1.2) forwards;
-  }
-  
-  #quantity {
-    background-color: transparent;
-    width: 40px;
-    height: 32px;
-    font-size: 16px;
-    border: none;
-    border-radius: 6px;
-    text-align: center;
-    padding: 0;
-    margin: 0;
-    appearance: textfield;
-    color: #c1c8d2;
-    font-weight: bold;
-    
-  }
-
-  #quantity:focus-visible {
-    outline: none;
-    outline-offset: 0px;
-    box-shadow: none;
-  }
-  
-  /* Remove spinner arrows for all browsers */
-  #quantity::-webkit-outer-spin-button,
-  #quantity::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
-  }
-  #quantity[type=number] {
-    -moz-appearance: textfield;
-  }
-
-
-  .buy-now-button {
-    border: none;
-    font-family: sans-serif;
-    font-size: 16px;
-    font-weight: bold;
-    padding: 5px 40px;
-    background-color: #ffffff;
-    border-radius: 999px;
-    transform: scale(100%);
-    transition: 300ms cubic-bezier(0.175, 0.885, 0.32, 1.1);
-  }
-
-  .buy-now-button:hover {
-    transform: scale(90%);
-    background-color: white;
-    color: #0d3135;
-  }
-
-  .buy-now-button:active {
-    border: none;
-    animation: selected 100ms cubic-bezier(0.175, 0.8, 0.3, 1.02) forwards;
-  }
-
-  .scroll-button {
-    font-family: sans-serif;
-    font-size: 20px;
-    font-weight: bold;
-    border: none;
-    padding: 10px 60px;
-    background-color: transparent;
-    color: white;
-    border-radius: 999px;
-    margin-top: 0px;
-    margin-bottom: 100px;
-    transform: scale(1);
-    border: white solid 2px;
-    transition: 300ms cubic-bezier(0.175, 0.885, 0.32, 1.2);
-  }
-
-  .scroll-button:hover {
-    color: black;
-    background-color: white;
-    border: none;
-    transform: scale(0.9);
-  }
-
-  .sar-currency {
-    filter: invert(98%) sepia(100%) saturate(1%) hue-rotate(321deg) brightness(103%) contrast(100%);
-  }
-
-  .saudi-price-holder {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    gap: 15px;
-  }
-
-
-  /* responsiveness */
-
-  @media (max-width: 1000px) {
-
-    .product_title {
-      font-size: 23px;
-      line-height: 28px;
-    }
-
-    .product_description {
-      font-size: 15px;
-      list-style: 18px;
-    }
-
-    .scroll-button {
-      font-family: 18px;
-    }
-
-    .product_1_wrapper {
-      flex-direction: column;
-      align-items: center;
-      justify-items: center;
-      gap: 25px;
-    }
-
-    .product_image {
-      width: 100%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-
-    .product_image img {
-      width: 100%;
-    }
-
-    .product_info {
-      width: 100%;
-    }
-  }
-
-  .next-section {
-    width: max-content;
-  }
-
-  @media (max-width:440px) {
-
-    .buy-now-button {
-      padding: 2px 40px;
-    }
-    .custom-quantity-selector {
-      max-width: 140px;
-    }
-
-    .product_1_wrapper {
-      padding-top: 10px;
-    }
-
-    .product_1_wrapper {
-      width: 90%;
-    }
-    .scroll-button {
-      width: 90dvw;
-      font-size: 18px;
-      padding: 10px 0px;
-      margin-bottom: 40px;
-    }
-
-  }
